Fix name__image alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -891,6 +891,7 @@ footer {
 .name__image {
   width: 4rem;
   height: 4rem;
+  margin-left: 1rem;
 }
 @media (min-width: 768px) {
   .name__image {
