--- a/sass/components/name.scss
+++ b/sass/components/name.scss
@@ -36,6 +36,7 @@
     &__image {
         width:  rem(64px);
         height: rem(64px);
+        margin-left: 1rem;
         @include mq(medium) {
             width:  rem(128px);
             height: rem(128px);
